# src/test/resources/api/openapi.yaml
@@ -181,7 +181,7 @@ paths:
             application/problem+json:
               schema:
                 $ref: "#/components/schemas/Problem"
-  /{municipalityId}/{namespace}/access-config/group/{id}:
+  /{municipalityId}/{namespace}/access-config/group/{groupId}:
     get:
       tags:
         - Access Group
@@ -202,13 +202,14 @@ paths:
             type: string
             pattern: "[\\w|\\-]+"
           example: MY_NAMESPACE
-        - name: id
+        - name: groupId
           in: path
-          description: Access group ID
+          description: Group ID
           required: true
           schema:
             type: string
-          example: 550e8400-e29b-41d4-a716-446655440000
+            minLength: 1
+          example: group123
       responses:
         "200":
           description: Successful operation
@@ -256,13 +257,14 @@ paths:
             type: string
             pattern: "[\\w|\\-]+"
           example: MY_NAMESPACE
-        - name: id
+        - name: groupId
           in: path
-          description: Access group ID
+          description: Group ID
           required: true
           schema:
             type: string
-          example: 550e8400-e29b-41d4-a716-446655440000
+            minLength: 1
+          example: group123
       requestBody:
         content:
           application/json:
@@ -292,6 +294,61 @@ paths:
             application/problem+json:
               schema:
                 $ref: "#/components/schemas/Problem"
+    post:
+      tags:
+        - Access Group
+      operationId: createAccessGroup
+      parameters:
+        - name: municipalityId
+          in: path
+          description: Municipality ID
+          required: true
+          schema:
+            type: string
+          example: 2281
+        - name: namespace
+          in: path
+          description: Namespace
+          required: true
+          schema:
+            type: string
+            pattern: "[\\w|\\-]+"
+          example: MY_NAMESPACE
+        - name: groupId
+          in: path
+          description: Group ID
+          required: true
+          schema:
+            type: string
+            minLength: 1
+          example: group123
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AccessGroup"
+        required: true
+      responses:
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "201":
+          description: Successfully created
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/AccessGroup"
     delete:
       tags:
         - Access Group
@@ -650,6 +707,11 @@ components:
           type: string
           description: User identifier
           example: joe01doe
+        origin:
+          type: string
+          description: How the entity was created
+          example: MANUAL
+          readOnly: true
         accessByType:
           type: array
           description: Access by type
